@@ -3,6 +3,8 @@ changes from 0.1.3 to 0.1.4
 * Fixed getopt functionality in main.c 
 * Changed src directory to server directory 
 * Added syslog messages 
+* Added to link with libaudit 
+* Fixed config file read functionality 
 
 changes from 0.1.2 to 0.1.3
 ---------------------------
